--- a/index.html
+++ b/index.html
@@ -12,117 +12,120 @@
 <body>
     <div class="menuBar">
         <div class="logo">
-            <i>M</i>
+            <i class="material-icons">menu</i>
             <img src="https://www.youtube.com/about/static/svgs/icons/brand-resources/YouTube-logo-full_color_light.svg?cache=72a5d9c" alt="">
         </div>
         <div class="search">
             <form action="">
                 <input type="text">
-                <button>Search</button>
+                <button><i class="material-icons">search</i></button>
             </form>
         </div>
         <div class="icons">
-            <i>U</i>
-            <i>A</i>
-            <i>N</i>
-            <i>P</i>
+            <i class="material-icons">videocam</i>
+            <i class="material-icons">apps</i>
+            <i class="material-icons">notifications</i>
+            <i class="material-icons">account_circle</i>
         </div>
     </div>
     <div class="mainBody">
         <div class="categories">
             <div class="categoriesSection">
 
-                <span class="category">
-                    <i>H</i>
+                <span class="category active-span">
+                    <i class="material-icons">home</i>
                     <span>Home</span>
                 </span>
 
                 <span class="category">
-                    <i>T</i>
+                    <i class="material-icons">local_fire_department</i>
                     <span>Trending</span>
                 </span>
 
                 <span class="category">
-                    <i>S</i>
-                    <span>Subscription</span>
+                    <i class="material-icons">subscriptions</i>
+                    <span>Subscriptions</span>
+                </span>
+            </div>
+
+            <hr>
+
+            <div class="categoriesSection">
+
+                <span class="category">
+                    <i class="material-icons">library_add_check</i>
+                    <span>Library</span>
+                </span>
+
+                <span class="category">
+                    <i class="material-icons">history</i>
+                    <span>History</span>
+                </span>
+
+                <span class="category">
+                    <i class="material-icons">play_arrow</i>
+                    <span>Your videos</span>
                 </span>
             </div>
 
             <div class="categoriesSection">
 
                 <span class="category">
-                    <i>H</i>
-                    <span>Home</span>
+                    <i class="material-icons">watch_later</i>
+                    <span>Watch later</span>
                 </span>
 
                 <span class="category">
-                    <i>T</i>
-                    <span>Trending</span>
-                </span>
-
-                <span class="category">
-                    <i>S</i>
-                    <span>Subscription</span>
+                    <i class="material-icons">thumb_up</i>
+                    <span>Liked videos</span>
                 </span>
             </div>
+            <hr>
+
 
             <div class="categoriesSection">
-
+                <h4>SUBSCRIPTIONS</h4>
                 <span class="category">
-                    <i>H</i>
-                    <span>Home</span>
+                    <i class="material-icons">account_circle</i>
+                    <span>Traversy Media</span>
                 </span>
 
                 <span class="category">
-                    <i>T</i>
-                    <span>Trending</span>
+                    <i class="material-icons">account_circle</i>
+                    <span>Zaio</span>
                 </span>
 
                 <span class="category">
-                    <i>S</i>
-                    <span>Subscription</span>
-                </span>
-            </div>
-
-            <div class="categoriesSection">
-
-                <span class="category">
-                    <i>H</i>
-                    <span>Home</span>
+                    <i class="material-icons">account_circle</i>
+                    <span>Academind</span>
                 </span>
 
                 <span class="category">
-                    <i>T</i>
-                    <span>Trending</span>
+                    <i class="material-icons">account_circle</i>
+                    <span>Academind</span>
                 </span>
 
                 <span class="category">
-                    <i>S</i>
-                    <span>Subscription</span>
-                </span>
-            </div>
-
-            <div class="categoriesSection">
-
-                <span class="category">
-                    <i>H</i>
-                    <span>Home</span>
+                    <i class="material-icons">account_circle</i>
+                    <span>Academind</span>
                 </span>
 
                 <span class="category">
-                    <i>T</i>
-                    <span>Trending</span>
+                    <i class="material-icons">account_circle</i>
+                    <span>Academind</span>
                 </span>
 
                 <span class="category">
-                    <i>S</i>
-                    <span>Subscription</span>
+                    <i class="material-icons">account_circle</i>
+                    <span>Academind</span>
                 </span>
+
             </div>
 
         </div>
 
         <div class="videos">
+            <h1>Recommended</h1>
             <div class="videosGrid">
                 <div class="video">
                     <div class="thumbnail">
@@ -187,9 +190,269 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="video">
+                    <div class="thumbnail">
+                        <img src="https://images.unsplash.com/photo-1598294203198-3823e375cd6e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=375&q=80" alt="">
+                    </div>
+                    <div class="details">
+                        <div class="author">
+                            <img src="https://images.unsplash.com/photo-1504473178671-6809ddc42af6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=667&q=80" alt="">
+                        </div>
+                        <div class="title">
+                            <h3>Cooking fever</h3>
+                            <a href="">Thee kitchen</a>
+                            <span>2000 views</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="video">
+                    <div class="thumbnail">
+                        <img src="https://images.unsplash.com/photo-1598294203198-3823e375cd6e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=375&q=80" alt="">
+                    </div>
+                    <div class="details">
+                        <div class="author">
+                            <img src="https://images.unsplash.com/photo-1504473178671-6809ddc42af6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=667&q=80" alt="">
+                        </div>
+                        <div class="title">
+                            <h3>Cooking fever</h3>
+                            <a href="">Thee kitchen</a>
+                            <span>2000 views</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="video">
+                    <div class="thumbnail">
+                        <img src="https://images.unsplash.com/photo-1598294203198-3823e375cd6e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=375&q=80" alt="">
+                    </div>
+                    <div class="details">
+                        <div class="author">
+                            <img src="https://images.unsplash.com/photo-1504473178671-6809ddc42af6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=667&q=80" alt="">
+                        </div>
+                        <div class="title">
+                            <h3>Cooking fever</h3>
+                            <a href="">Thee kitchen</a>
+                            <span>2000 views</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="video">
+                    <div class="thumbnail">
+                        <img src="https://images.unsplash.com/photo-1598294203198-3823e375cd6e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=375&q=80" alt="">
+                    </div>
+                    <div class="details">
+                        <div class="author">
+                            <img src="https://images.unsplash.com/photo-1504473178671-6809ddc42af6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=667&q=80" alt="">
+                        </div>
+                        <div class="title">
+                            <h3>Cooking fever</h3>
+                            <a href="">Thee kitchen</a>
+                            <span>2000 views</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="video">
+                    <div class="thumbnail">
+                        <img src="https://images.unsplash.com/photo-1598294203198-3823e375cd6e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=375&q=80" alt="">
+                    </div>
+                    <div class="details">
+                        <div class="author">
+                            <img src="https://images.unsplash.com/photo-1504473178671-6809ddc42af6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=667&q=80" alt="">
+                        </div>
+                        <div class="title">
+                            <h3>Cooking fever</h3>
+                            <a href="">Thee kitchen</a>
+                            <span>2000 views</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="video">
+                    <div class="thumbnail">
+                        <img src="https://images.unsplash.com/photo-1598294203198-3823e375cd6e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=375&q=80" alt="">
+                    </div>
+                    <div class="details">
+                        <div class="author">
+                            <img src="https://images.unsplash.com/photo-1504473178671-6809ddc42af6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=667&q=80" alt="">
+                        </div>
+                        <div class="title">
+                            <h3>Cooking fever</h3>
+                            <a href="">Thee kitchen</a>
+                            <span>2000 views</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="video">
+                    <div class="thumbnail">
+                        <img src="https://images.unsplash.com/photo-1598294203198-3823e375cd6e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=375&q=80" alt="">
+                    </div>
+                    <div class="details">
+                        <div class="author">
+                            <img src="https://images.unsplash.com/photo-1504473178671-6809ddc42af6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=667&q=80" alt="">
+                        </div>
+                        <div class="title">
+                            <h3>Cooking fever</h3>
+                            <a href="">Thee kitchen</a>
+                            <span>2000 views</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="video">
+                    <div class="thumbnail">
+                        <img src="https://images.unsplash.com/photo-1598294203198-3823e375cd6e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=375&q=80" alt="">
+                    </div>
+                    <div class="details">
+                        <div class="author">
+                            <img src="https://images.unsplash.com/photo-1504473178671-6809ddc42af6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=667&q=80" alt="">
+                        </div>
+                        <div class="title">
+                            <h3>Cooking fever</h3>
+                            <a href="">Thee kitchen</a>
+                            <span>2000 views</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="video">
+                    <div class="thumbnail">
+                        <img src="https://images.unsplash.com/photo-1598294203198-3823e375cd6e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=375&q=80" alt="">
+                    </div>
+                    <div class="details">
+                        <div class="author">
+                            <img src="https://images.unsplash.com/photo-1504473178671-6809ddc42af6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=667&q=80" alt="">
+                        </div>
+                        <div class="title">
+                            <h3>Cooking fever</h3>
+                            <a href="">Thee kitchen</a>
+                            <span>2000 views</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="video">
+                    <div class="thumbnail">
+                        <img src="https://images.unsplash.com/photo-1598294203198-3823e375cd6e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=375&q=80" alt="">
+                    </div>
+                    <div class="details">
+                        <div class="author">
+                            <img src="https://images.unsplash.com/photo-1504473178671-6809ddc42af6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=667&q=80" alt="">
+                        </div>
+                        <div class="title">
+                            <h3>Cooking fever</h3>
+                            <a href="">Thee kitchen</a>
+                            <span>2000 views</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="video">
+                    <div class="thumbnail">
+                        <img src="https://images.unsplash.com/photo-1598294203198-3823e375cd6e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=375&q=80" alt="">
+                    </div>
+                    <div class="details">
+                        <div class="author">
+                            <img src="https://images.unsplash.com/photo-1504473178671-6809ddc42af6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=667&q=80" alt="">
+                        </div>
+                        <div class="title">
+                            <h3>Cooking fever</h3>
+                            <a href="">Thee kitchen</a>
+                            <span>2000 views</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="video">
+                    <div class="thumbnail">
+                        <img src="https://images.unsplash.com/photo-1598294203198-3823e375cd6e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=375&q=80" alt="">
+                    </div>
+                    <div class="details">
+                        <div class="author">
+                            <img src="https://images.unsplash.com/photo-1504473178671-6809ddc42af6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=667&q=80" alt="">
+                        </div>
+                        <div class="title">
+                            <h3>Cooking fever</h3>
+                            <a href="">Thee kitchen</a>
+                            <span>2000 views</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="video">
+                    <div class="thumbnail">
+                        <img src="https://images.unsplash.com/photo-1598294203198-3823e375cd6e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=375&q=80" alt="">
+                    </div>
+                    <div class="details">
+                        <div class="author">
+                            <img src="https://images.unsplash.com/photo-1504473178671-6809ddc42af6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=667&q=80" alt="">
+                        </div>
+                        <div class="title">
+                            <h3>Cooking fever</h3>
+                            <a href="">Thee kitchen</a>
+                            <span>2000 views</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="video">
+                    <div class="thumbnail">
+                        <img src="https://images.unsplash.com/photo-1598294203198-3823e375cd6e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=375&q=80" alt="">
+                    </div>
+                    <div class="details">
+                        <div class="author">
+                            <img src="https://images.unsplash.com/photo-1504473178671-6809ddc42af6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=667&q=80" alt="">
+                        </div>
+                        <div class="title">
+                            <h3>Cooking fever</h3>
+                            <a href="">Thee kitchen</a>
+                            <span>2000 views</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="video">
+                    <div class="thumbnail">
+                        <img src="https://images.unsplash.com/photo-1598294203198-3823e375cd6e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=375&q=80" alt="">
+                    </div>
+                    <div class="details">
+                        <div class="author">
+                            <img src="https://images.unsplash.com/photo-1504473178671-6809ddc42af6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=667&q=80" alt="">
+                        </div>
+                        <div class="title">
+                            <h3>Cooking fever</h3>
+                            <a href="">Thee kitchen</a>
+                            <span>2000 views</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="video">
+                    <div class="thumbnail">
+                        <img src="https://images.unsplash.com/photo-1598294203198-3823e375cd6e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=375&q=80" alt="">
+                    </div>
+                    <div class="details">
+                        <div class="author">
+                            <img src="https://images.unsplash.com/photo-1504473178671-6809ddc42af6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=667&q=80" alt="">
+                        </div>
+                        <div class="title">
+                            <h3>Cooking fever</h3>
+                            <a href="">Thee kitchen</a>
+                            <span>2000 views</span>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
+    </div>
+    </div>
+
+
 
 </body>
 
