--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
 <head>
 
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YouTube UI Clone</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> lin
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
+    <title>YouTube UI Clone</title>
+
 </head>
 
 <body>
